   - ImGuiWindowFlags_AlwaysUseWindowPadding --> ImGuiChildFlags_AlwaysUseWindowPadding (moved to ImGuiChildFlags).
   So:
   - BeginChild(name, size, 0, ImGuiWindowFlags_NavFlattened)           --> BeginChild(name, size, ImGuiChildFlags_NavFlattened, 0)
   - BeginChild(name, size, 0, ImGuiWindowFlags_AlwaysUseWindowPadding) --> BeginChild(name, size, ImGuiChildFlags_AlwaysUseWindowPadding, 0)

Other Changes:

- Tables: fixed a bug where nesting BeginTable()->Begin()->BeginTable() would
  result in temporarily incorrect state, which would lead to bugs to side effects
  in various locations, e.g. GetContentRegionAvail() calls or using clipper. (#9005)
  EndTable() was mistakenly restoring a wrong current table.
- Tables: Angled headers: fixed an auto-resize feedback loop that could
  affect tables with empty non-resizing columns using angled headers, making
  them typically flicker back and forth between +0 and +1 pixels.
- Windows: io.ConfigWindowsMoveFromTitleBarOnly is latched during Begin(),
  effectively allowing to change the value on a per-window basis (although
  there is a better internal mechanism for it).
- Disabled: fixed a bug when a previously enabled item that got nav focus
  and then turns disabled could still be activated using keyboard. (#9036)
- InputText: when buffer is not resizable, trying to paste contents that
  cannot fit will now truncate text to nearest UTF-8 codepoint boundaries,
  instead of completely ignoring the paste. (#9029)
- InputText: avoid continuously overwriting ownership of ImGuiKey_Enter/_KeypadEnter
  keys in order to allow e.g. external Shortcut override behavior. (#9004)
- InputText: when using a callback to reduce/manipulate the value of BufTextLen,
  we do not require anymore that CursorPos be clamped by user code. (#9029)
- InputTextMultiline: fixed a crash when using ImGuiInputTextFlags_WordWrap and
  resizing the parent window while keeping the multi-line field active (which is